resolved alignment

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,8 +9,8 @@ body {
 
 .swiper {
   width: 100%;
-  height: 250px;
-  margin-top: 11vh;
+  height: 260px;
+  margin-top: 60px;
 }
 
 .swiper-slide {
@@ -198,9 +198,11 @@ footer hr{
   padding: 20px 10px;
 }
 
+
+
 @media screen and (max-width: 700px) {
   .swiper {
-    height: 180px;
+    height: 220px;
     margin-top: 50px;
   }
 
@@ -224,8 +226,16 @@ footer hr{
     display: none !important;
   }
 
-  .professor-detail-avatar{
+  /* .professor-detail-avatar{
     width: 86px;
     height: 86px;
+  } */
+}
+
+@media screen and (max-width: 500px) {
+
+  .swiper {
+    height: 180px;
+    margin-top: 50px;
   }
 }
